# Harmony_OS_Demo

./: BUILD.gn  README.md
aht20_demo/: BUILD.gn  aht20_demo.c  aht20_demo.h  aht20_test.c
aht_oled_demo/: BUILD.gn  aht20.c  aht20.h  aht_oled_demo.c  fonts.h  oled.c  oled.h
iot_demo/: BUILD.gn  aht20.c  mqtt.c  mqtt.h  startup.c  wifi_connect.c  wifi_connect.h
iothardware/: BUILD.gn  traffic_light_demo.c
led_demo/: BUILD.gn  led_demo.c
mqtt_test/: BUILD.gn  mqtt_test.c  mqtt_test.h
my_hello_world/: BUILD.gn  hello_world.c
oled_demo/: BUILD.gn
tcp_control_light/: BUILD.gn  colorful_light_demo.c  colorful_light_human_demo.c  led_example.c  oled_demo.c  oled_fonts.h  traffic_light_demo.c  wifi_connect_demo.c
wifi_demo/: BUILD.gn  wifi_connect_demo.c  wifi_connect_demo.h
