# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

lite_component("app") {
    features = [
        #"startup",
        "my_hello_world:myapp",
        #"led_demo",
        #"iothardware:traffic_light_demo",
        #"oled_demo:sensing_demo",
        #"wifi_demo",
        #"aht20_demo",
        #"aht_oled_demo",
        #"tcp_control_light:wifi_demo",
        #"mqtt_test:mqtt_test_at",
        #"iot_demo:myapp"
    ]
}
