static_library("myapp") {
    sources = [
        "startup.c",
        "aht20.c",
        "wifi_connect.c",
        "mqtt.c"
    ]
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",
        "//third_party/pahomqtt/MQTTPacket/src",
        "//third_party/pahomqtt/MQTTPacket/samples",
        "//vendor/hisi/hi3861/hi3861/components/at/src",
        "//third_party/cJSON",
    ]
}